fix: navbar wasn't collapsing after click due to anchor links

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -409,6 +409,7 @@ nav {
     &.active {
         visibility: visible;
         opacity: 1;
+        bottom: 15px;
     }
 }
 
